--- a/src/i18n/En.json
+++ b/src/i18n/En.json
@@ -27,14 +27,14 @@
     "title": "Projects",
     "items": [
       {
-        "img": "../src/assets/projects/project1.jpg",
+         "img": "/projects/project1.jpg",
         "title": "Honey Shop - E-Commerce Platform (IN PROCESS)",
         "description": "An e-commerce platform built for an online honey store, offering a seamless shopping experience for customers to browse and purchase premium, organic honey products. The application features a responsive design, optimized product pages, and a secure checkout process. Optimized for SEO.",
         "technologies": ["React", "Next.js", "Tailwindcss"]
       },
       {
-        "img": "../src/assets/projects/project2.jpg",
-        "title": "Responsive Landing Page",
+        "img": "./projects/project2.jpg",
+        "title": "Responsive Landing Page (IN PROCESS) ",
         "description": "An application for managing tasks and projects, with features such as task creation, assignment, and progress tracking.",
         "technologies": ["React", "Tailwind CSS"]
       }
