--- a/src/i18n/Es.json
+++ b/src/i18n/Es.json
@@ -27,14 +27,14 @@
     "title": "Proyectos",
     "items": [
       { 
-        "img": "../src/assets/projects/project1.jpg",
+        "img": "/projects/project1.jpg",
         "title": "Honey Shop - Plataforma de comercio electrónico (EN PROCESO)",
         "description": "Una plataforma de comercio electrónico construida para una tienda online de miel, ofreciendo una experiencia de compra fluida para los clientes al navegar y comprar productos de miel orgánica premium. La aplicación cuenta con un diseño responsivo, páginas de productos optimizadas y un proceso de pago seguro. Optimizada para SEO.",
         "technologies": ["React", "Next.js", "Tailwindcss"]
       },
       {
-        "img": "../src/assets/projects/project2.jpg",
-        "title": "Landing page responsiva",
+        "img": "/projects/project2.jpg",
+        "title": "Landing page responsiva (EN PROCESO)",
         "description": "Una aplicación para gestionar tareas y proyectos, con funciones como la creación de tareas, asignación y seguimiento del progreso.",
         "technologies": ["React", "Tailwind CSS"]
       }
